--- a/mockup/petstarz_mock/package.json
+++ b/mockup/petstarz_mock/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "firebase": "^10.7.0",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.2",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18"
